# pjrt-coreml

./: .gitignore  Cargo.toml  README.md  build.rs  plot_benchmark_results.py  test.py  test_nnx.py  test_simple.py
.cargo/: config.toml
src/: coreml.rs  lib.rs  py_translate.rs
swift/: CleanInterface.hpp  coreml_shim.swift
tests/: benchmarking.py  run_benchmarks.py  setup_jax.py  test_nnx.py  test_simple.py
