[package]
name = "pjrt-coreml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
lazy_static = "1"
sysinfo = "0.32"
async-std = "1.13"
log = "0.4"
env_logger = "0.11"
cxx = "1.0"
autocxx = "0.27"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
bindgen = "0.69"
cxx-build = "1.0"
autocxx-build = "0.27.0"
